- Added Library Utils with utility for xml serializations - Added ListManager - Added PlaylistManager - Refactorings

--- a/ProgrammeringCSharp3/MultiMediaBussinessLogic/MultiMediaBusinessLogic.csproj
+++ b/ProgrammeringCSharp3/MultiMediaBussinessLogic/MultiMediaBusinessLogic.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MultiMediaBusinessLogic\MultiMediaClasses.csproj" />
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
   </ItemGroup>
 
 </Project>
