--- a/ProgrammeringCSharp3/MultiMediaBusinessLogic/MultiMediaClassesAndManagers.csproj
+++ b/ProgrammeringCSharp3/MultiMediaBusinessLogic/MultiMediaClassesAndManagers.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
