- Added functionality to create a playlist - Added playlistPlaybackDelayBetweenMediaSec with default value in Playlist - Made Title and Description of Playlist accessible

--- a/ProgrammeringCSharp3/MultiMediaApplication/MultiMediaApplication.csproj
+++ b/ProgrammeringCSharp3/MultiMediaApplication/MultiMediaApplication.csproj
@@ -68,9 +68,16 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PlaylistCreationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MessageBoxes.cs" />
+    <Compile Include="PlaylistCreationWindow.xaml.cs">
+      <DependentUpon>PlaylistCreationWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -108,6 +115,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\folder_icon8.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\video_playlist_icons8.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
