--- a/ProgrammeringCSharp3/MultiMediaApplication/MultiMediaApplication.csproj
+++ b/ProgrammeringCSharp3/MultiMediaApplication/MultiMediaApplication.csproj
@@ -72,21 +72,28 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PlaylistWindows\PlaylistPlayWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControls\MediaViewSelectionUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PlaylistCreationWindow.xaml">
+    <Page Include="PlaylistWindows\PlaylistCreationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PlaylistWindows\PlaylistPlayWindow.xaml.cs">
+      <DependentUpon>PlaylistPlayWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\MediaViewSelectionUserControl.xaml.cs">
       <DependentUpon>MediaViewSelectionUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="MessageBoxes.cs" />
-    <Compile Include="PlaylistCreationWindow.xaml.cs">
+    <Compile Include="PlaylistWindows\PlaylistCreationWindow.xaml.cs">
       <DependentUpon>PlaylistCreationWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
