- Changed so that error message appears before adding media if on playlist selected - Reorganising dependency properties - Removed separate class for dependencyproperties, it can not be created in a separate class

--- a/ProgrammeringCSharp3/MultiMediaApplication/MultiMediaApplication.csproj
+++ b/ProgrammeringCSharp3/MultiMediaApplication/MultiMediaApplication.csproj
@@ -89,7 +89,6 @@
     <Compile Include="PlaylistWindows\PlaylistPlayWindow.xaml.cs">
       <DependentUpon>PlaylistPlayWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UserControls\DependencyProperties\MediaViewSelectionDependencyProperties.cs" />
     <Compile Include="UserControls\MediaViewSelectionUserControl.xaml.cs">
       <DependentUpon>MediaViewSelectionUserControl.xaml</DependentUpon>
     </Compile>
@@ -142,6 +141,20 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\video_playlist_icons8.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="WMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\video_icons8.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
