--- a/ProgrammeringCSharp3/MultiMediaApplication/MultiMediaApplication.csproj
+++ b/ProgrammeringCSharp3/MultiMediaApplication/MultiMediaApplication.csproj
@@ -72,6 +72,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PlaylistWindows\ChangePlaylistSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PlaylistWindows\PlaylistPlayWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -86,6 +90,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PlaylistWindows\ChangePlaylistSettings.xaml.cs">
+      <DependentUpon>ChangePlaylistSettings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PlaylistWindows\PlaylistPlayWindow.xaml.cs">
       <DependentUpon>PlaylistPlayWindow.xaml</DependentUpon>
     </Compile>
