--- a/ProgrammeringCSharp3/MultiMediaApplication/MultiMediaApplication.csproj
+++ b/ProgrammeringCSharp3/MultiMediaApplication/MultiMediaApplication.csproj
@@ -72,7 +72,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="PlaylistWindows\ChangePlaylistSettings.xaml">
+    <Page Include="PlaylistWindows\ChangePlaylistSettingsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -90,8 +90,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PlaylistWindows\ChangePlaylistSettings.xaml.cs">
-      <DependentUpon>ChangePlaylistSettings.xaml</DependentUpon>
+    <Compile Include="PlaylistWindows\ChangePlaylistSettingsWindow.xaml.cs">
+      <DependentUpon>ChangePlaylistSettingsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="PlaylistWindows\PlaylistPlayWindow.xaml.cs">
       <DependentUpon>PlaylistPlayWindow.xaml</DependentUpon>
