- Refactoring DatabaseOperations - Preparing Load from database - Refactoring Mein Menu of program

--- a/ProgrammeringCSharp3/Assignment2/MultiMediaDataAccess/MultiMediaDataAccess.csproj
+++ b/ProgrammeringCSharp3/Assignment2/MultiMediaDataAccess/MultiMediaDataAccess.csproj
@@ -80,6 +80,7 @@
       <DependentUpon>202010051417235_Create-Tables.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="PlaylistDatabaseOperationsHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
