- Completed PlaylistRetreival from db - Added conversion methods to convert from model to classes of the application

--- a/ProgrammeringCSharp3/Assignment2/MultiMediaDataAccess/MultiMediaDataAccess.csproj
+++ b/ProgrammeringCSharp3/Assignment2/MultiMediaDataAccess/MultiMediaDataAccess.csproj
@@ -80,8 +80,11 @@
       <DependentUpon>202010051417235_Create-Tables.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="ImagesDatabaseOperationsHelper.cs" />
+    <Compile Include="VideoDatabaseOperationsHelper.cs" />
     <Compile Include="PlaylistDatabaseOperationsHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeViewNodeDatabaseHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
