- Fixed error when removing playlists - Fixed relationship with meddia - Aded exception handling when saving/loadingfrom db - Refactored exe application on where to call db code -Videos in playlists are now loaded from the database aswell

--- a/ProgrammeringCSharp3/Assignment2/MultiMediaBussinessLogic/MultiMediaBussinessLogic.csproj
+++ b/ProgrammeringCSharp3/Assignment2/MultiMediaBussinessLogic/MultiMediaBussinessLogic.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MultiMediaClassesAndManagers\MultiMediaClassesAndManagers.csproj" />
+    <ProjectReference Include="..\MultiMediaDataAccess\MultiMediaDataAccess.csproj" />
   </ItemGroup>
 
   <ItemGroup>
