- Refactored Conversion Between DatabaseModel and ApplicationModel -Removed unused classes and methods - Added comments to classes and methods

--- a/ProgrammeringCSharp3/Assignment2/MultiMediaDataAccess/MultiMediaDataAccess.csproj
+++ b/ProgrammeringCSharp3/Assignment2/MultiMediaDataAccess/MultiMediaDataAccess.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Convert\DbModelToApplicationModel.cs" />
     <Compile Include="DatabaseOperations.cs" />
     <Compile Include="DatabaseModelAndContext\Models\ImageModel.cs" />
     <Compile Include="DatabaseModelAndContext\Models\PlaylistModel.cs" />
@@ -80,11 +81,9 @@
       <DependentUpon>202010051417235_Create-Tables.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="ImagesDatabaseOperationsHelper.cs" />
-    <Compile Include="VideoDatabaseOperationsHelper.cs" />
     <Compile Include="PlaylistDatabaseOperationsHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TreeViewNodeDatabaseHelper.cs" />
+    <Compile Include="TreeViewNodeOperationsDatabaseHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
