--- a/ProgrammeringCSharp3/Assignment3/QuizApplicationBussinessLogic/QuizApplicationBussinessLogic.csproj
+++ b/ProgrammeringCSharp3/Assignment3/QuizApplicationBussinessLogic/QuizApplicationBussinessLogic.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Handlers\QuizHandler.cs" />
     <Compile Include="Managers\AnswerManager.cs" />
     <Compile Include="QuizClasses\Answer.cs" />
     <Compile Include="Managers\QuestionManager.cs" />
