- If closing without saving present data, a message is shown - If trying to load from xml with unsaved data,a message is shown - Answers can now be added, edited ordeleted after a question has beenadded - Bugg fixes

--- a/ProgrammeringCSharp3/Assignment3/QuizApplication/QuizApplication.csproj
+++ b/ProgrammeringCSharp3/Assignment3/QuizApplication/QuizApplication.csproj
@@ -74,6 +74,8 @@
     <Compile Include="CreateQuestionWindow.xaml.cs">
       <DependentUpon>CreateQuestionWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Enums\TypeOfAction.cs" />
+    <Compile Include="Enums\TypeOfItemToChange.cs" />
     <Compile Include="EventArgs\IsSavedEventArgs.cs" />
     <Compile Include="GenericChangePopupUserControl.xaml.cs">
       <DependentUpon>GenericChangePopupUserControl.xaml</DependentUpon>
