- Search icon as file in project instead of url

--- a/ProgrammeringCSharp3/Assignment3/QuizApplication/QuizApplication.csproj
+++ b/ProgrammeringCSharp3/Assignment3/QuizApplication/QuizApplication.csproj
@@ -118,5 +118,8 @@
       <Name>QuizApplicationBussinessLogic</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\icons8_search.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
