--- a/ProgrammeringCSharp3/Assignment3/QuizApplication/QuizApplication.csproj
+++ b/ProgrammeringCSharp3/Assignment3/QuizApplication/QuizApplication.csproj
@@ -111,13 +111,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Assignment2\Utilities\Utilities.csproj">
-      <Project>{646ac35d-16a6-43b1-baec-e2e40cd4b971}</Project>
-      <Name>Utilities</Name>
-    </ProjectReference>
     <ProjectReference Include="..\QuizApplicationBussinessLogic\QuizApplicationBussinessLogic.csproj">
       <Project>{f8219530-9318-478c-8f45-3cfb23f0a27a}</Project>
       <Name>QuizApplicationBussinessLogic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utilities\Utilities.csproj">
+      <Project>{124fa469-53c0-479e-8810-e33f49e48740}</Project>
+      <Name>Utilities</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
