--- a/ProgrammeringCSharp3/Assignment4/MultiMediaApplicationTest/MultiMediaApplicationTest.csproj
+++ b/ProgrammeringCSharp3/Assignment4/MultiMediaApplicationTest/MultiMediaApplicationTest.csproj
@@ -51,9 +51,16 @@
   <ItemGroup>
     <Compile Include="MediaHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FileHandlerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.csproj">
+      <Project>{b4b246d1-b6c0-4437-b2bd-bde15a293244}</Project>
+      <Name>Utilities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
