--- a/ProgrammeringCSharp3/Assignment4/MultiMediaApplicationTest/packages.config
+++ b/ProgrammeringCSharp3/Assignment4/MultiMediaApplicationTest/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="5.0.0" targetFramework="net472" />
 </packages>
