- Fixed VideoTests to work on other computers - Added better test names

--- a/ProgrammeringCSharp3/Assignment4/MultiMediaApplicationTest/MultiMediaApplicationTest.csproj
+++ b/ProgrammeringCSharp3/Assignment4/MultiMediaApplicationTest/MultiMediaApplicationTest.csproj
@@ -94,6 +94,12 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="VideoForTest\WIN_20200921_15_43_07_Pro.mp4">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
