--- a/ProgrammeringCSharp3/Assignment5Alt1/MediaPlayerThread/Threads.csproj
+++ b/ProgrammeringCSharp3/Assignment5Alt1/MediaPlayerThread/Threads.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,7 +46,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\FigureMoveDirection.cs" />
+    <Compile Include="Enums\FigureDrawMode.cs" />
+    <Compile Include="Enums\ButtonBeingDisabled.cs" />
     <Compile Include="MediaPlayerHandler.cs" />
+    <Compile Include="MovingObjectHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
