Clock implemented Some refactorings of variable names Changed lower grid cell height

--- a/ProgrammeringCSharp3/Assignment5Alt1/MediaPlayerThread/Threads.csproj
+++ b/ProgrammeringCSharp3/Assignment5Alt1/MediaPlayerThread/Threads.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Enums\FigureDrawMode.cs" />
     <Compile Include="Enums\ButtonBeingDisabled.cs" />
     <Compile Include="MediaPlayerHandler.cs" />
+    <Compile Include="MoveHandsHandler.cs" />
     <Compile Include="MovingObjectHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
