--- a/ProgrammeringCSharp3/Assignment6/Assignment6/Assignment6.csproj
+++ b/ProgrammeringCSharp3/Assignment6/Assignment6/Assignment6.csproj
@@ -95,5 +95,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BussinessLogic\BussinessLogic.csproj">
+      <Project>{2e1b2f4d-ec3d-4947-9ced-8b7f52ff2c10}</Project>
+      <Name>BussinessLogic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
