--- a/ProgrammeringCSharp3/Assignment6/BussinessLogic/BussinessLogic.csproj
+++ b/ProgrammeringCSharp3/Assignment6/BussinessLogic/BussinessLogic.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DiagramInformation.cs" />
+    <Compile Include="DiagramPointsToDrawOfGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
