--- a/ProgrammeringCSharp3/Assignment6/BussinessLogic/BussinessLogic.csproj
+++ b/ProgrammeringCSharp3/Assignment6/BussinessLogic/BussinessLogic.csproj
@@ -42,6 +42,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DiagramHandler.cs" />
     <Compile Include="DiagramInformation.cs" />
     <Compile Include="DiagramPointsToDrawOfGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
