--- a/ProgrammeringCSharp3/Assignment6/BussinessLogic/BussinessLogic.csproj
+++ b/ProgrammeringCSharp3/Assignment6/BussinessLogic/BussinessLogic.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DiagramInformation.cs" />
     <Compile Include="DiagramIntervalPointsGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DiagramDimentionsCalculator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
